--- a/4_Let's_boot_my_PC/4.3.2/00.BootLoader/makefile
+++ b/4_Let's_boot_my_PC/4.3.2/00.BootLoader/makefile
@@ -3,5 +3,5 @@ all: BootLoader.bin
 BootLoader.bin: BootLoader.asm
 	nasm -o BootLoader.bin BootLoader.asm
 
-claen:
-	rm -f BootLoader.bin 
+clean:
+	rm -f BootLoader.bin
