--- a/6_Converting_to_32bit_Protected_Mode/01.Kernel32/makefile
+++ b/6_Converting_to_32bit_Protected_Mode/01.Kernel32/makefile
@@ -1,7 +1,9 @@
-all: VirtualOS.bin
+all: Kernal32.bin
 
-VirtualOS.bin: VIrtualOS.asm
-	nasm -o VirtualOS.bin VirtualOS.asm
+Kernel32.bin: Source/EntryPoint.s
+	nasm -o Kernel32.bin $<
 
 clean:
-	rm -f VirtualOS.bin
+	rm -f Kernel32.bin
+
+	
