--- a/6_Converting_to_32bit_Protected_Mode/01.Kernel32/makefile
+++ b/6_Converting_to_32bit_Protected_Mode/01.Kernel32/makefile
@@ -1,9 +1,7 @@
-all: Kernal32.bin
+all: Kernel32.bin
 
 Kernel32.bin: Source/EntryPoint.s
 	nasm -o Kernel32.bin $<
 
 clean:
 	rm -f Kernel32.bin
-
-	
