--- a/6_Converting_to_32bit_Protected_Mode/makefile
+++ b/6_Converting_to_32bit_Protected_Mode/makefile
@@ -11,6 +11,18 @@ BootLoader:
 	@echo === Build Complete ===
 	@echo
 
+Kernel32:
+	@echo
+	@echo === Build 32bit Kernel ===
+	@echo
+
+	make -C 01.Kernel32
+	
+	@echo
+	@echo === Build Complete ===
+	@echo
+
+
 Disk.img: 00.BootLoader/BootLoader.bin 01.Kernel32/Kernel32.bin
 	@echo
 	@echo === Disk Image Build Start ===
