--- a/7_Writing_Kernel_in_C/makefile
+++ b/7_Writing_Kernel_in_C/makefile
@@ -1,4 +1,4 @@
-all: BootLoader Kernel32 Disk.img
+all: BootLoader Kernel32 Disk.img Utility
 
 BootLoader:
 	@echo
@@ -34,6 +34,19 @@ Disk.img: 00.BootLoader/BootLoader.bin 01.Kernel32/Kernel32.bin
 	@echo === All Build Complete ===
 	@echo
 
+Utilty:
+	@echo
+	@echo === Utility Build Start ===
+	@echo
+
+	make -C 04.Utility
+
+	@echo
+	@echo === Utility Build Complete ===
+	@echo
 clean:
 	make -C 00.BootLoader clean
+	make -C 01.Kernel32 clean
+	make -C 02.Kernel64 clean
+	make -C 04.Utility clean
 	rm -f Disk.img
