--- a/7_Writing_Kernel_in_C/makefile
+++ b/7_Writing_Kernel_in_C/makefile
@@ -1,4 +1,4 @@
-all: BootLoader Kernel32 Disk.img Utility
+all: BootLoader Kernel32 Utility Disk.img
 
 BootLoader:
 	@echo
@@ -22,6 +22,17 @@ Kernel32:
 	@echo === Build Complete ===
 	@echo
 
+Utilty:
+	@echo
+	@echo === Utility Build Start ===
+	@echo
+
+	make -C 04.Utility
+
+	@echo
+	@echo === Utility Build Complete ===
+	@echo
+
 
 Disk.img: 00.BootLoader/BootLoader.bin 01.Kernel32/Kernel32.bin
 	@echo
@@ -34,16 +45,7 @@ Disk.img: 00.BootLoader/BootLoader.bin 01.Kernel32/Kernel32.bin
 	@echo === All Build Complete ===
 	@echo
 
-Utilty:
-	@echo
-	@echo === Utility Build Start ===
-	@echo
 
-	make -C 04.Utility
-
-	@echo
-	@echo === Utility Build Complete ===
-	@echo
 clean:
 	make -C 00.BootLoader clean
 	make -C 01.Kernel32 clean
