--- a/10_converting_to_64bit_mode/01.Kernel32/makefile
+++ b/10_converting_to_64bit_mode/01.Kernel32/makefile
@@ -66,7 +66,7 @@ ASSEMBLYOBEJCTFIELS = $(notdir $(patsubst %.asm, %.o, $(ASSEMBLYSOURCEFILES)))
 	$(GCC32) -c $<
 
 #define a rules for converting .asm file to .o
-%.o: ../SOURCEDIRECTORY/%.asm
+%.o: ../$(SOURCEDIRECTORY)/%.asm
 	$(NASM32) -f elf32 -o $@ $<
 
 #Create a file regarding the dependency.
