--- a/10_converting_to_64bit_mode/makefile
+++ b/10_converting_to_64bit_mode/makefile
@@ -1,4 +1,4 @@
-all: BootLoader Kernel32 Utility Disk.img
+all: BootLoader Kernel32 Kernel64 Utility Disk.img
 
 BootLoader:
 	@echo
@@ -22,6 +22,18 @@ Kernel32:
 	@echo === Build Complete ===
 	@echo
 
+Kernel64:
+	@echo
+	@echo === Build 64bit Kernel ===
+	@echo
+
+	make -C 02.Kernel64
+
+	@echo
+	@echo === build Complete ===
+	@echo
+
+
 Utility:
 	@echo
 	@echo === Utility Build Start ===
@@ -34,7 +46,8 @@ Utility:
 	@echo
 
 
-Disk.img: 00.BootLoader/BootLoader.bin 01.Kernel32/Kernel32.bin
+
+Disk.img: 00.BootLoader/BootLoader.bin 01.Kernel32/Kernel32.bin 02.Kernel64/Kernel64.bin
 	@echo
 	@echo === Disk Image Build Start ===
 	@echo
@@ -44,6 +57,7 @@ Disk.img: 00.BootLoader/BootLoader.bin 01.Kernel32/Kernel32.bin
 	@echo
 	@echo === All Build Complete ===
 	@echo
+
 
 
 clean:
