--- a/10_converting_to_64bit_mode/02.Kernel64/makefile
+++ b/10_converting_to_64bit_mode/02.Kernel64/makefile
@@ -8,7 +8,7 @@ OBJECTDIRECTORY = temp
 SOURCEDIRECTORY = Source
 
 ;build items and build methods
-all: prepare Kernel64.binary
+all: prepare Kernel64.bin
 
 prepare:
 	mkdir -p $(OBJECTDIRECTORY)
