--- a/10_converting_to_64bit_mode/makefile
+++ b/10_converting_to_64bit_mode/makefile
@@ -1,4 +1,4 @@
-all: BootLoader Kernel32 Kernel64 Utility Disk.img
+all: BootLoader Kernel32 Kernel64 Disk.img Utility
 
 BootLoader:
 	@echo
@@ -33,6 +33,16 @@ Kernel64:
 	@echo === build Complete ===
 	@echo
 
+Disk.img: 00.BootLoader/BootLoader.bin 01.Kernel32/Kernel32.bin 02.Kernel64/Kernel64.bin
+	@echo
+	@echo === Disk Image Build Start ===
+	@echo
+
+	./04.Utility/00.ImageMaker/ImageMaker $^
+
+	@echo
+	@echo === All Build Complete ===
+	@echo
 
 Utility:
 	@echo
@@ -43,19 +53,6 @@ Utility:
 
 	@echo
 	@echo === Utility Build Complete ===
-	@echo
-
-
-
-Disk.img: 00.BootLoader/BootLoader.bin 01.Kernel32/Kernel32.bin 02.Kernel64/Kernel64.bin
-	@echo
-	@echo === Disk Image Build Start ===
-	@echo
-
-	./04.Utility/00.ImageMaker/ImageMaker $^
-
-	@echo
-	@echo === All Build Complete ===
 	@echo
 
 
